Updates 'Diquinha da Juntu' to 'Dica da Juntu'

--- a/geppetto/Views/Storyboards/Activities/ActivityStep.storyboard
+++ b/geppetto/Views/Storyboards/Activities/ActivityStep.storyboard
@@ -60,8 +60,8 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-IZ-Ops">
                                                 <rect key="frame" x="16" y="390.5" width="382" height="64"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diquinha da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M" customClass="BoldLabel" customModule="geppetto" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="8" width="153" height="23"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dica da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M" customClass="BoldLabel" customModule="geppetto" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="8" width="116" height="23"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
